# shapeshifter-api

./: README.md  manage.py  pyproject.toml
shapeshifter/: asgi.py  settings.py  urls.py  wsgi.py
